add the new service for come call

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,12 @@
 
         <activity android:name=".ServiceStartActivity" />
         <activity android:name=".CallOnActivity" />
-        <activity android:name=".MessageOnActivity"></activity>
+        <activity android:name=".MessageOnActivity" />
+
+        <service
+            android:name=".MyServicephone"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
